--- a/proto/BUILD
+++ b/proto/BUILD
@@ -15,7 +15,7 @@
 # Description:
 #   This BUILD file contains proto targets for the S2A client libraries.
 
-load("//third_party/upb/bazel:upb_proto_library.bzl", "upb_proto_library")
+load("@upb//bazel:upb_proto_library.bzl", "upb_proto_library")
 
 licenses(["notice"])
 
