Add OpenSSL-based unit tests. (#16)
* First pass at OpenSSL-based ChachaPoly crypter.'

* fix build file format and add clang-format yaml

* remove bazel bin

* Add OpenSSL-based AES-GCM test.

* Fix openssl CCP tests.

* Add TODO about OpenSSL build.

--- a/crypto/BUILD
+++ b/crypto/BUILD
@@ -15,11 +15,11 @@
 # Description:
 #   This BUILD file contains the libraries and tests for the AEAD crypter used by the S2A client libraries.
 
+load("@rules_foreign_cc//tools/build_defs:configure.bzl", "configure_make")
+
 licenses(["notice"])
 
-default_visibility = [
-    "//record_protocol:__pkg__",
-]
+default_visibility = ["//record_protocol:__pkg__"]
 
 package(default_visibility = default_visibility)
 
@@ -40,7 +40,8 @@ cc_library(
     srcs = [
         "aes_gcm_crypter.cc",
         "chacha_poly_crypter_boringssl.cc",
-        "chacha_poly_crypter_openssl.cc",
+        # TODO(matthewstevenson88) Figure out OpenSSL build.
+        # "chacha_poly_crypter_openssl.cc",
         "s2a_aead_crypter.cc",
     ],
     hdrs = [
@@ -134,3 +135,105 @@ cc_test(
         "@com_google_googletest//:gtest_main",
     ],
 )
+
+# OpenSSL-specific libraries and tests.
+
+config_setting(
+    name = "darwin_build",
+    values = {"cpu" : "darwin"},
+)
+
+configure_make(
+    name = "openssl",
+    configure_command = "config",
+    configure_options = select({
+        ":darwin_build" : [
+            "shared", "ARFLAGS=r",
+            "enable-ec_nistp_64_gcc_128",
+            "no-ssl2", "no-ssl3", "no-comp"
+            ],
+        "//conditions:default" : []
+    }),
+    lib_source = "@openssl//:all",
+    configure_env_vars = select({
+        ":darwin_build" : {
+            "OSX_DEPLOYMENT_TARGET" : "10.14",
+            "AR" : "",
+        },
+        "//conditions:default" : {}
+    }),
+    shared_libraries = select({
+        ":darwin_build" : [
+            "libssl.dylib",
+            "libcrypto.dylib",
+        ],
+        "//conditions:default" : [
+            "libssl.so",
+            "libcrypto.so",
+        ],
+    }),
+)
+
+cc_library(
+    name = "aes_gcm_crypter_openssl",
+    testonly = 1,
+    srcs = [
+        "aes_gcm_crypter.cc",
+        "s2a_aead_crypter.cc",
+    ],
+    hdrs = [
+        "s2a_aead_constants.h",
+        "s2a_aead_crypter.h",
+    ],
+    deps = [
+        ":openssl",
+        ":s2a_aead_crypter_util",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/types:variant",
+    ],
+)
+
+cc_library(
+    name = "chacha_poly_crypter_openssl",
+    testonly = 1,
+    srcs = [
+        "chacha_poly_crypter_openssl.cc",
+        "s2a_aead_crypter.cc",
+    ],
+    hdrs = [
+        "s2a_aead_constants.h",
+        "s2a_aead_crypter.h",
+    ],
+    deps = [
+        ":openssl",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/types:variant",
+    ],
+)
+
+cc_test(
+    name = "aes_gcm_crypter_openssl_test",
+    srcs = ["aes_gcm_crypter_test.cc"],
+    deps = [
+        ":aes_gcm_crypter_openssl",
+        ":s2a_aead_crypter_test_util",
+        "//test_util:s2a_test_util",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_test(
+    name = "chacha_poly_crypter_openssl_test",
+    srcs = ["chacha_poly_crypter_test.cc"],
+    deps = [
+        ":chacha_poly_crypter_openssl",
+        ":s2a_aead_crypter_test_util",
+        "//test_util:s2a_test_util",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
