Use pre-generated UPB files as default.

--- a/handshaker/BUILD
+++ b/handshaker/BUILD
@@ -35,8 +35,8 @@ cc_library(
         "//channel:s2a_channel",
         "//frame_protector:s2a_frame_protector",
         "//options:s2a_options",
-        "//proto:common_upb_proto",
-        "//proto:s2a_upb_proto",
+        "//proto/upb-generated/proto:common_upb_proto",
+        "//proto/upb-generated/proto:s2a_upb_proto",
         "//token_manager:access_token_manager",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/memory",
@@ -59,7 +59,7 @@ cc_library(
     ],
     deps = [
         "//options:s2a_options",
-        "//proto:common_upb_proto",
+        "//proto/upb-generated/proto:common_upb_proto",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/types:variant",
         "@upb",
@@ -80,8 +80,8 @@ cc_library(
         ":s2a_context",
         ":s2a_proxy",
         "//options:s2a_options",
-        "//proto:common_upb_proto",
-        "//proto:s2a_upb_proto",
+        "//proto/upb-generated/proto:common_upb_proto",
+        "//proto/upb-generated/proto:s2a_upb_proto",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/types:variant",
@@ -97,8 +97,8 @@ cc_library(
     deps = [
         ":s2a_util",
         "//options:s2a_options",
-        "//proto:common_upb_proto",
-        "//proto:s2a_context_upb_proto",
+        "//proto/upb-generated/proto:common_upb_proto",
+        "//proto/upb-generated/proto:s2a_context_upb_proto",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
@@ -114,8 +114,8 @@ cc_test(
         ":s2a_context",
         ":s2a_util",
         "//options:s2a_options",
-        "//proto:common_upb_proto",
-        "//proto:s2a_context_upb_proto",
+        "//proto/upb-generated/proto:common_upb_proto",
+        "//proto/upb-generated/proto:s2a_context_upb_proto",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/types:variant",
@@ -132,8 +132,8 @@ cc_test(
         ":s2a_proxy",
         "//:s2a_constants",
         "//frame_protector:s2a_frame_protector",
-        "//proto:common_upb_proto",
-        "//proto:s2a_upb_proto",
+        "//proto/upb-generated/proto:common_upb_proto",
+        "//proto/upb-generated/proto:s2a_upb_proto",
         "//token_manager:fake_access_token_manager",
         "@com_google_absl//absl/status",
         "@com_google_googletest//:gtest_main",
@@ -147,7 +147,7 @@ cc_test(
     deps = [
         ":s2a_util",
         "//options:s2a_options",
-        "//proto:common_upb_proto",
+        "//proto/upb-generated/proto:common_upb_proto",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/types:variant",
         "@com_google_googletest//:gtest_main",
