add openssl target to CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/third_party/abseil-cpp)
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/third_party/upb)
 add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/third_party/upb/cmake)
+find_package(OpenSSL REQUIRED)
 
 if(APPLE)
   set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -undefined dynamic_lookup -flat_namespace")
@@ -95,8 +96,6 @@ add_library(s2a_context_upb
 target_link_libraries(s2a_context_upb
   common_upb
   upb)
-  # third_party/upb/upb
-  # third_party/upb/generated_code_support__only_for_generated_code_do_not_use__i_give_permission_to_break_me)
 add_library(s2a_channel INTERFACE)
 target_link_libraries(s2a_channel INTERFACE
   com_google_absl//absl/status
@@ -173,7 +172,7 @@ add_library(hkdf
   src/crypto/hkdf.cc
   src/crypto/hkdf.h)
 target_link_libraries(hkdf
-  boringssl//:crypto
+  OpenSSL::Crypto
   com_google_absl//absl/status)
 add_library(s2a_aead_crypter
   src/crypto/aes_gcm_crypter.cc
@@ -183,7 +182,7 @@ add_library(s2a_aead_crypter
   src/crypto/s2a_aead_crypter.h)
 target_link_libraries(s2a_aead_crypter
   s2a_aead_crypter_util
-  boringssl//:crypto
+  OpenSSL::Crypto
   com_google_absl//absl/memory
   com_google_absl//absl/status
   com_google_absl//absl/strings
@@ -192,7 +191,7 @@ add_library(s2a_aead_crypter_util
   src/crypto/s2a_aead_crypter_util.cc
   src/crypto/s2a_aead_crypter_util.h)
 target_link_libraries(s2a_aead_crypter_util
-  boringssl//:crypto)
+  OpenSSL::Crypto)
 add_library(s2a_util
   src/handshaker/s2a_util.cc
   src/handshaker/s2a_util.h)
