use custom crypto target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,10 +73,11 @@ add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/third_party/upb/cmake)
 if(S2A_CORE_USE_BORINGSSL)
   message(STATUS "Using BoringSSL.")
   include_directories(${CMAKE_CURRENT_BINARY_DIR}/third_party/boringssl)
+  set(s2a_core_crypto crypto)
 else()
   message(STATUS "Using local SSL library.")
   find_package(OpenSSL REQUIRED)
-  set(crypto OpenSSL::Crypto)
+  set(s2a_core_crypto OpenSSL::Crypto)
 endif()
 
 if(APPLE)
@@ -180,7 +181,7 @@ add_library(hkdf
   src/crypto/hkdf.cc
   src/crypto/hkdf.h)
 target_link_libraries(hkdf
-  crypto
+  s2a_core_crypto
   com_google_absl//absl/status)
 add_library(s2a_aead_crypter
   src/crypto/aes_gcm_crypter.cc
@@ -190,7 +191,7 @@ add_library(s2a_aead_crypter
   src/crypto/s2a_aead_crypter.h)
 target_link_libraries(s2a_aead_crypter
   s2a_aead_crypter_util
-  crypto
+  s2a_core_crypto
   com_google_absl//absl/memory
   com_google_absl//absl/status
   com_google_absl//absl/strings
@@ -199,7 +200,7 @@ add_library(s2a_aead_crypter_util
   src/crypto/s2a_aead_crypter_util.cc
   src/crypto/s2a_aead_crypter_util.h)
 target_link_libraries(s2a_aead_crypter_util
-  crypto)
+  s2a_core_crypto)
 add_library(s2a_util
   src/handshaker/s2a_util.cc
   src/handshaker/s2a_util.h)
