try allowing openssl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,10 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/third_party/abseil-cpp)
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/third_party/upb)
 
-if (NOT S2A_CORE_SSL_LIBRARIES)
+if (S2A_CORE_FIND_OPENSSL STREQUAL "true")
+  find_package(OpenSSL REQUIRED)
+  set(S2A_CORE_SSL_LIBRARIES OpenSSL::Crypto)
+elseif (NOT S2A_CORE_SSL_LIBRARIES)
   include_directories(${CMAKE_CURRENT_BINARY_DIR}/third_party/boringssl)
   set(S2A_CORE_SSL_LIBRARIES crypto)
 endif()
