Add BoringSSL as subdirectory instead of including directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,6 @@ if (S2A_CORE_UPB_LIBRARY)
   include_directories(S2A_CORE_UPB_LIBRARY)
 else()
   add_definitions(-DS2A_CORE_USE_NEW_UPB_APIS)
-  add_definitions(-DOPENSSL_IS_BORINGSSL)
   include_directories(${CMAKE_CURRENT_SOURCE_DIR}/third_party/upb)
 endif()
 
@@ -85,7 +84,8 @@ if (S2A_CORE_FIND_OPENSSL STREQUAL "true")
   set(S2A_CORE_SSL_LIBRARIES OpenSSL::Crypto)
   set(_S2A_CORE_SSL_INCLUDE_DIR ${OPENSSL_INCLUDE_DIR})
 elseif (NOT S2A_CORE_SSL_LIBRARIES)
-  include_directories(${CMAKE_CURRENT_BINARY_DIR}/third_party/boringssl)
+  #include_directories(${CMAKE_CURRENT_BINARY_DIR}/third_party/boringssl)
+  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/boringssl)
   set(S2A_CORE_SSL_LIBRARIES crypto)
   set(_S2A_CORE_SSL_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/third_party/boringssl/src/include)
 endif()
